<resources>
    <string name="app_name">Venerável Giovanni Ciresola</string>
    <string name="nome_padre">Venerável Giovanni Ciresola</string>
    <string name="nao_existem_favoritas">Ainda não existem mensagens favoritas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- itens menu -->
    <string name="page_mensagem_do_padre">Mensagem do Padre</string>
    <string name="page_mensagens_favoritas">Mensagens Favoritas</string>
    <string name="page_biografia_do_padre">Biografia do Padre</string>
    <string name="page_canonizacao">Canonização</string>
    <string name="page_oracao">Orações</string>
    <string name="page_irmas">Irmãs Pobres Servas</string>
    <string name="page_irmas_externas">Irmãs Externas</string>
    <string name="page_cenaculo">Cenáculo Sacerdotal Diocesano</string>
    <string name="page_amigos_do_cenaculo">Amigos do Cenáculo</string>
    <string name="page_contato">Contato</string>
    <string name="page_videos">Videos</string>
    <!-- itens menu -->
</resources>
